--- a/trep.1
+++ b/trep.1
@@ -33,7 +33,7 @@
 .Os
 .Sh NAME
 .Nm trep
-.Nd stream stdin to stdout or stderr using a regular expression
+.Nd Selectively stream stdin to stdout/stderr based on regular expressions
 .Sh SYNOPSIS
 .Nm trep
 .Bk -words
@@ -52,6 +52,12 @@
 .Op Ar
 .Ek
 .Sh DESCRIPTION
+.Nm trep
+(tee-rep) combines tee(1) and grep(1) to select input using a regular
+expression and output to stdout or stderr based on the match.
+.Nm trep
+is a fork of OpenBSD grep and so supports all the usual grep(1) options.
+.Pp
 The
 .Nm trep
 utility searches any given input files,
@@ -293,6 +299,12 @@ No lines were selected.
 An error occurred.
 .El
 .Sh EXAMPLES
+To monitor syslog and send all occurrences of the word
+.Sq CRITICAL
+to stderr and everything else to stdout:
+.Pp
+.Dl $ tail -f syslog | trep --stream-with-match=stderr --stream-without-match=stdout 'CRITICAL'
+.Pp
 To find all occurrences of the word
 .Sq patricia
 in a file:
